# sequence-runner

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  agent_factory.py  app.py  constants.py  graph_builder.py  mock_db.py  pyproject.toml  requirements.txt  run_local.py  sequence_config_loader.py  sequence_runner.py  serverless.yml  step_utils.py  test_event.json  tool_invoker.py
.github/workflows/: serverless.yml
src/: app.py  types.py
src/agent/: agent_factory.py  types.py
src/data/: mock_db.py  secrets_manager.py
src/graph/: graph_builder.py
src/sequence/: sequence_config_loader.py  sequence_runner.py  step_utils.py  types.py
src/state/: session_state.py
src/tools/: constants.py  tool_invoker.py
tests/fixtures/: agent_as_tool_test_event.json  test_event.json
