[project]
name = "sequence-runner"
version = "0.1.0"
requires-python = ">=3.13.3"
dependencies = [
  "pydantic_core ~=2.33.2",
  "python-dotenv ~=1.1.0",
  "langgraph ~=0.4.5",
  "mcp ~=1.9.0",
  "langchain-mcp-adapters ~=0.1.1",
  "langchain-openai ~=0.3.17",
  "langchain-core ~=0.3.60",
  "langchain ~=0.3.25",
  "pydantic ~=2.11.4",
  "jsonschema_pydantic ~=0.6",
  "nest-asyncio ~=1.6.0",
  "boto3 ~=1.38.21",
  "botocore ~=1.38.21",
  "mcp-server"
]

[tool.uv.sources]
mcp-server = { path = "./mcp-server" }

[tool.uv.pip]
no-emit-package = ["mcp-server"]